Prevent horizontal scroll on iPhone

--- a/WeddingShare/wwwroot/css/template.css
+++ b/WeddingShare/wwwroot/css/template.css
@@ -91,6 +91,10 @@
   }
 }
 
+html {
+  overflow-x: hidden !important;
+}
+
 body {
   margin: 0;
   font-family: var(--bs-body-font-family);
